--- a/learn-certs-pr/courses/az-900t00.yml
+++ b/learn-certs-pr/courses/az-900t00.yml
@@ -44,7 +44,7 @@ outlineSection: |-
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Definieren Sie Cloud Computing und seine wichtigsten Vorteile.
-  - Öffentliche, private und hybride Cloud-Modelle erläutern.
+  - Erläutern Öffentliche, private und hybride Cloud-Modelle
   - Erläutern Sie die Cloud-Dienste IaaS, PaaS und SaaS.
 
 
@@ -118,12 +118,11 @@ outlineSection: |-
   - Beschreiben von Datenschutz-, Compliance- und Datenschutzstandards.
 
 
-  ### Modul 4&#58; Azure Pricing and Support
-  In diesem Modul Mehr erfahren über Azure-Abonnements, das Planen und Verwalten von Kosten, Supportoptionen, SLAs und Servicelebenszyklen.
+  ### Modul 4&#58; Azure-Preise, Service Level Agreements (SLAs) und Lebenszyklus
+  In diesem Modul erfahren Sie mehr über Azure-Abonnements, das Planen und Verwalten von Kosten, Supportoptionen, SLAs und Servicelebenszyklen.
   #### Lektionen
   - Azure Abos
   - Kostenplanung und Verwaltung
-  - Azure-Unterstützungsoptionen.
   - Azure Service Level Agreements (SLAs)
   - Service Lifecycle in Azure
 
@@ -132,15 +131,13 @@ outlineSection: |-
 
   #### Labor &#58; Exemplarische Vorgehensweise&#58; Verwenden Sie den Azure TCO-Rechner
 
-  #### Labor &#58; Exemplarische Vorgehensweise&#58; Öffnen Sie eine Supportanfrage
-
   #### Labor &#58; Exemplarische Vorgehensweise&#58; Berechnen Sie zusammengesetzte SLAs
 
   #### Labor &#58; Exemplarische Vorgehensweise&#58; Zugriff auf Azure Preview-Funktionen
+
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Verwenden Sie ein Azure-Abonnement.
   - Kosten planen und verwalten.
-  - Erläutern der Azure-Unterstützungsoptionen.
   - Beschreiben von Azure-SLAs.
   - Erläutern der Azure-Servicelebenszyklen.
 
