--- a/learn-certs-pr/courses/az-900t01.yml
+++ b/learn-certs-pr/courses/az-900t01.yml
@@ -31,14 +31,12 @@ products:
 exams:
 - uid: exam.az-900
 summary: |-
-  Dieser Kurs vermittelt grundlegende Kenntnisse über Cloud-Services und wie diese Services mit Microsoft Azure bereitgestellt werden. Der Kurs kann als optionaler erster Schritt zum Erlernen von Cloud-Diensten und Microsoft Azure absolviert werden, bevor weitere Kurse zu Microsoft Azure oder Microsoft Cloud Services absolviert werden.
+  Dieser eintägige Kurs vermittelt grundlegende Kenntnisse über Cloud-Konzepte. Azure-Kern-Services; Sicherheit, Datenschutz, Compliance und Vertrauen; und Azure-Preise und -Support.
 
-  Der Kurs behandelt allgemeine Cloud-Computing-Konzepte sowie allgemeine Cloud-Computing-Modelle und -Services wie Public, Private und Hybrid Cloud sowie Infrastructure-as-a-Service (IaaS) und Plattform-as-a-Service (PaaS) sowie Software-as-a-Service (SaaS).
-
-  Es werden auch einige grundlegende Azure-Services und -Lösungen sowie wichtige, fundamentale Azure-Services in Bezug auf Sicherheit, Datenschutz, Compliance und Vertrauen behandelt. Schließlich werden auch die bei Azure verfügbare Preisgestaltung und die Support-Services abgedeckt.
+  Hinweis&#58; Dieser Kurs bietet keinen Azure-Pass oder Zeit für Schüler, an praktischen Übungen teilzunehmen. Wenn Sie an einer interaktiveren praktischen Laborerfahrung interessiert sind, sollten Sie den AZ-900T00 in Betracht ziehen&#58; Microsoft Azure Fundamentals (2-tägiger) Kurs, der von Trainern geleitete praktische Übungen umfasst. Der Inhalt für beide Kurse richtet sich nach der Zieldomäne der AZ-900-Prüfung.
 
   #### Zielgruppenprofil
-  Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Er richtet sich an alle, die mehr über Microsoft Azure erfahren möchten.
+  Dieser Kurs eignet sich für Programmmanager und technischen Vertrieb mit allgemeinem IT-Hintergrund. Diese Schüler möchten mehr über unsere Angebote erfahren, sehen, wie Komponenten implementiert werden, und Fragen zu Produkten und Funktionen stellen. Dieser Kurs bietet keinen Azure-Pass oder Zeit im Klassenzimmer, damit die Studenten praktische Aktivitäten ausführen können. Die Studenten können eine kostenlose Testversion erhalten und die Komplettlösungen außerhalb des Unterrichts durchführen. Dieser Kurs besteht hauptsächlich aus Vorlesungen und Demonstrationen. Dieser Kurs hilft dabei, jemanden auf die AZ-900-Prüfung vorzubereiten.
 prerequisitesSection: |-
   Es gibt keine Voraussetzungen für die Teilnahme am Kurs. Technische IT-Erfahrung ist nicht erforderlich, jedoch sind allgemeine IT-Kenntnisse und Erfahrungen von Vorteil.
 outlineSection: |-
@@ -46,7 +44,7 @@ outlineSection: |-
   In diesem Modul lernen Sie grundlegende Cloud-Konzepte.
   #### Lektionen
   - Lernziele
-  - Warum Cloud-Services?
+  Warum Cloud-Services?
   - Infrastructure-as-a-Service (IaaS), Platform-as-a-Service (PaaS) , und Software-as-a-Service (SaaS)
   - Öffentliche, private und hybride Cloud-Modelle
 
@@ -76,16 +74,15 @@ outlineSection: |-
   - Datenschutz-, Compliance- und Datenschutzstandards in Azure
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Verständnis von Sicherheit, Datenschutz, Compliance und Vertrauen in Microsoft Azure
+  - Verständnis Sicherheit, Datenschutz, Compliance und Vertrauen in Microsoft Azure
 
-  ### Modul 4&#58; Azure Pricing and Support
+  ### Modul 4&#58; Azure-Preise, Service Level Agreements (SLAs) und Lebenszyklus
   In diesem Modul konzentrieren wir uns auf die bei Microsoft verfügbare Preisgestaltung sowie Supportmodelle.
   #### Lektionen
   - Azure Abos
   - Kostenplanung und Verwaltung
-  - In Azure verfügbare Supportoptionen
   - Service Lifecycle in Azure
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  - Preisgestaltung und Support-Modelle verstehen, die bei Microsoft verfügbar sind
+  - Grundlegendes zu den bei Microsoft verfügbaren Preis- und Servicelebenszyklusmodellen
 
