--- a/learn-certs-pr/courses/pl-900t00.yml
+++ b/learn-certs-pr/courses/pl-900t00.yml
@@ -8,7 +8,7 @@ courseNumber: 'PL-900T00-A'
 hoursToComplete: 48
 iconUrl: /media/learn/certification/course.svg
 skillsGained:
-- skill: 'Beschreiben der Power Plattform-Komponenten: Power Apps, Power BI und Microsoft Automate '
+- skill: 'Beschreiben der Power Plattform-Komponenten: Power Apps, Power BI und Microsoft Automate'
 - skill: 'Beschreiben der Power Plattform-Komponenten: Allgemeiner Daten-Service, Connector und AI Builder'
 - skill: Beschreiben von Cloud-übergreifenden Szenarien für M365-, Dynamics 365-, Microsoft Azure- und Drittanbieter-Dienste
 - skill: Identifizieren von Vorteilen und Funktionen der Power-Plattform
@@ -34,32 +34,31 @@ prerequisitesSection: |-
   Keine Vorbedingungen für diesen Kurs
 outlineSection: |-
   ### Modul 1&#58; Einführung in Power Platform
-  Erfahren Sie mehr über die Komponenten von Power Platform, Möglichkeiten der Datenverbindung und wie Unternehmen diese Technologie nutzen können, zur
+  Erfahren Sie mehr über die Komponenten von Power Platform, Möglichkeiten zum Verbinden von Daten und wie Unternehmen diese Technologie nutzen können, um Geschäftslösungen zu erstellen.
   #### Lektionen
   - Übersicht über Power Platform
   - Modulübersicht
 
-  Lernen Sie die Komponenten und Funktionen von Power Platform kennen
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Identifizieren Sie, wann jede Power Platform-Komponentenanwendung zur Erstellung von Geschäftslösungen verwendet werden soll
   - Lernen Sie den Wert der Nutzung von Power Platform zur Erstellung von Geschäftslösungen kennen
+  - Lernen Sie die Komponenten und Funktionen von Power Platform kennen
 
   ### Modul 2&#58; Erste Schritte mit Power Apps
   Lernen Sie den Wert und die Fähigkeiten von PowerApps kennen und erfahren Sie, wie andere Organisationen diese Technologie zur Erstellung einfacher Anwendungen für ihr Unternehmen nutzen.
   #### Lektionen
   - Übersicht über Power Apps
   - Wie man eine App-Lösung erstellt
-
-
-  #### Labor &#58; Wie man eine einfache Canvas-App 1 erstellt
   - Staff Canvas App erstellen
   - Vervollständigen Sie die App
 
   #### Labor &#58; Wie man eine einfache Canvas-App 2 erstellt
   - Sicherheits-Canvas-App erstellen
 
-  Erfahren Sie, was Power Apps ist und welchen geschäftlichen Wert es hat
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Erfahren Sie, wie andere Organisationen ihre Prozesse mit Power Apps digitalisieren
   - Sehen Sie Power Apps in Aktion und lernen Sie Optionen für die Erstellung Ihrer ersten App kennen.
+  - Erfahren Sie, was Power Apps ist und welchen geschäftlichen Wert es hat
 
 
   ### Modul 3&#58; Einführung in den allgemeinen Datenservice
@@ -74,9 +73,10 @@ outlineSection: |-
   - Entitäten und Beziehungen erstellen
   - Daten importieren
 
-  Erklären Sie, welche Umgebungen, Entitäten, Felder und Beziehungen im gemeinsamen Datendienst enthalten sind
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Beschreiben Sie den Unterschied zwischen Common Data Service und Common Data Model
   - Erklären Sie Anwendungsfälle und Einschränkungen von Geschäftsregeln und Prozessabläufen
+  - Erklären Sie, welche Umgebungen, Entitäten, Felder und Beziehungen im gemeinsamen Datendienst enthalten sind
 
 
   ### Modul 4&#58; Erste Schritte mit Power Automate
@@ -90,9 +90,10 @@ outlineSection: |-
   - Besuchsmeldungsfluss anlegen
   - Sicherheitssweep-Flow erstellen
 
-  Lernen Sie den geschäftlichen Nutzen und die Funktionen von Power Automate kennen
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Sehen Sie, wie Power Automate funktioniert und aus der Perspektive des Benutzers aussieht
   - Erstellen Sie einen einfachen Ablauf
+  - Lernen Sie den geschäftlichen Nutzen und die Funktionen von Power Automate kennen
 
 
   ### Modul 5&#58; Erste Schritte mit Power BI
@@ -103,7 +104,9 @@ outlineSection: |-
 
 
   #### Labor &#58; Erstellen Sie einen Power-BI-Bericht
-  Beschreiben Sie den Geschäftswert und die Funktionen von Power BI
+
+  Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
   - Sehen Sie, wie Power BI aus der Sicht des Benutzers funktioniert und aussieht
   - Erfahren Sie, wie Sie ein einfaches Power BI-Dashboard erstellen
+  - Beschreiben Sie den Geschäftswert und die Funktionen von Power BI
 
