--- a/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
+++ b/learn-certs-pr/d365-finance-and-operations-apps-solution-architect-expert.yml
@@ -2,14 +2,14 @@
 title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Dynamics 365: Finance and Operations Apps Solution Architect Expert'
-  description: Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierensteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
+  description: Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
 uid: certification.d365-finance-and-operations-apps-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierensteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
-subTitle: Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierensteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
+  Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
+subTitle: Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
 levels:
 - advanced
 skills:
@@ -17,6 +17,7 @@ skills:
 - Entwerfen von Lösungskomponenten
 - Definition von Lösungstest- und Managementstrategien
 roles:
+- functional-consultant
 - solution-architect
 type: role-based
 products:
