--- a/learn-certs-pr/devops-engineer.yml
+++ b/learn-certs-pr/devops-engineer.yml
@@ -8,18 +8,22 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
   <div><font color='red'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong></font><br/><br/></div>
 
-  Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.
+  Kandidaten für die DevOps Engineer Expert-Zertifizierung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien verfügen, um kontinuierlich geschäftlichen Nutzen zu erzielen.
+
+  Zu den Aufgaben für diese Rolle gehören das Entwerfen und Implementieren von Strategien für Zusammenarbeit, Code, Infrastruktur, Quellcodeverwaltung, Sicherheit, Compliance, kontinuierliche Integration, Testen, Bereitstellung, Überwachung und Feedback.
+
+  Ein Kandidat für diese Zertifizierung muss sowohl mit der Azure-Verwaltung als auch mit der Entwicklung vertraut sein und Experte in mindestens einem dieser Bereiche sein.
 subTitle: Die Experten von Azure DevOps kombinieren Menschen, Prozesse und Technologien, um kontinuierlich wertvolle Produkte und Dienstleistungen bereitzustellen, die den Bedürfnissen der Endverbraucher und den Geschäftszielen entsprechen.
 levels:
 - advanced
 skills:
-- Entwickeln einer DevOps-Strategie
-- Implementieren von DevOps Entwicklungsprozessen
-- Implementieren einer kontinuierlichen Integration
-- Implementieren von kontinuierlicher Bereitstellung
-- Implementieren des Abhängigkeitsmanagements
-- Implementieren der App-Infrastruktur
-- Implementieren von kontinuierlichem Feedback
+- Entwickeln Sie eine Instrumentierungsstrategie
+- Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie
+- Entwicklung eines Sicherheits- und Compliance-Plans
+- Quellcode verwalten
+- Ermöglichen der Kommunikation und Zusammenarbeit
+- Kontinuierliche Integration definieren und definieren
+- Definieren und implementieren Sie eine kontinuierliche Liefer- und Release-Management-Strategie
 roles:
 - devops-engineer
 type: role-based
