--- a/learn-certs-pr/exams/77-419.yml
+++ b/learn-certs-pr/exams/77-419.yml
@@ -7,7 +7,7 @@ uid: exam.77-419
 displayName: 77-419
 summary: |-
   <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div><strong>Dieses Examen wird am 30. Juni 2020 eingestellt. Eine Ersatzprüfung kann verfügbar sein. Um mehr zu erfahren, besuchen Sie unseren Blog&#58; <a href='https://www.microsoft.com/en-us/learning/community.aspx'>https://www.microsoft.com/en-us/learning/community.aspx</a> und überprüfen Sie unsere Prüfungsabgaben. Hinweis&#58; Prüfungen werden um 23&#58;59 Uhr Central Standard Time eingestellt.<br/><br/></strong></div>
+  <div><strong>Diese Prüfung wurde eingestellt. Informationen zu derzeit verfügbaren Optionen finden Sie auf der <a href='/learn/certifications/browse/'>Seite Zertifizierungen und Prüfungen durchsuchen</a>.<br/><br/></strong></div>
   </div>
 
   Kandidaten für die Prüfung zu Microsoft SharePoint 2013 sollten gute Kenntnisse der SharePoint-Umgebung haben und alle Aufgaben auf Siteebene durchführen können. Sie sollten die korrekte Anwendung der Hauptsite, Bibliothek und Listenfunktionen von SharePoint 2013 kennen und demonstrieren. Kandidaten sollten in der Lage sein, SharePoint-Sites zu optimieren und anzupassen, um Strukturen bereitzustellen, Probleme zu beheben, die Zusammenarbeit zu erleichtern und die Produktivität zu steigern. Beispiele dafür sind die Verwaltung von Listenberechtigungen, das Hinzufügen von Inhalten zum Schnellstart, Erstellen von Teamwebsites und Ändern der Bibliotheksansichten. Kandidaten sind eventuell in der Funktion eines Mitarbeiters des technischen Supports, Projektmanagers, Teamleiters, Abteilungsleiters usw. tätig.
@@ -19,10 +19,10 @@ locales:
 levels:
 - beginner
 skills:
-- Erstellen und Formatieren von Inhalten ( 25-30%)
-- Verwalten von SharePoint-Websites (30 -35%)
-- Teilnahme an Benutzergemeinschaften (15 -20%)
-- Konfigurieren und Konsumieren von Website-Suchergebnissen (15 -20%)
+- Erstellen und Formatieren von Inhalten (25-30%)
+- Verwalten von SharePoint-Websites (30-35%)
+- Teilnahme an Benutzergemeinschaften (15-20%)
+- Konfigurieren und Konsumieren von Website-Suchergebnissen (15-20%)
 roles:
 - business-user
 products:
