--- a/learn-certs-pr/exams/77-422.yml
+++ b/learn-certs-pr/exams/77-422.yml
@@ -8,17 +8,11 @@ displayName: 77-422
 summary: |-
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
 
-  MOS 2013 Study Guide for Microsoft PowerPoint Published&#58; Oktober 2013
-
   Lernen Sie, Ihre Kompetenz mit PowerPoint unter Beweis zu stellen. Üben und bereiten Sie sich auf die PowerPoint Microsoft Office Specialist (MOS)-Prüfung 2013 mit diesem All-in-One-Studienführer vor. Finden Sie eine vollständige, objektive Prüfungsabdeckung, zusammen mit leicht verständlichen Verfahren und Illustrationen, um die wesentlichen Fähigkeiten zu überprüfen. Außerdem erhalten Sie praktische Übungsaufgaben und können das Gelernte anwenden. Der Leitfaden enthält herunterladbare Übungsdateien.
-
-  Dieses Buch beim Microsoft Press Store kaufen
-
-  Kandidaten für dieses examens sind IT-Experten, die mit Hilfe von Office sichere und flexible Anwendungen erstellen.
 subTitle: 'Kandidaten für dieses examens sind IT-Experten, die mit Hilfe von Office sichere und flexible Anwendungen erstellen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toXb
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-422&examname=PowerPoint%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-422
 locales:
 - en
 - zh-cn
@@ -34,6 +28,7 @@ locales:
 - pl
 - pt-br
 - ru
+- ar-sa
 levels:
 - beginner
 skills:
