--- a/learn-certs-pr/exams/77-882.yml
+++ b/learn-certs-pr/exams/77-882.yml
@@ -12,20 +12,20 @@ summary: |-
 subTitle: Der Benutzer auf Kernebene von Microsoft Office Excel 2010 sollte in der Lage sein, die Microsoft Office Excel 2010-Software auf der Funktions- und Funktionsebene zu bedienen. Sie sollten mit mindestens 80 Prozent der Funktionen und Fähigkeiten von Microsoft Office Excel 2010 vertraut sein und wissen, wie man diese nutzt. Der Basis-Benutzer sollte in der Lage sein, Microsoft Office Excel 2010 zu verwenden, um professionell aussehende Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Zu den Nutzern gehören Menschen aus den unterschiedlichsten Berufsgruppen aus fast allen Bereichen des Berufs-, Studenten- und Privatlebens.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toWe
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-882&examname=Excel%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-882
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
-- pt-br
 - ru
+- ar-sa
+- it
+- pt-br
 levels:
 - beginner
 skills:
