--- a/learn-certs-pr/exams/77-887.yml
+++ b/learn-certs-pr/exams/77-887.yml
@@ -12,18 +12,18 @@ summary: |-
 subTitle: Benutzer von Microsoft Word 2010 auf Expertenebene sind in der Lage, die Word 2010-Software auf der Funktions- und Funktionsebene kompetent und sicher zu nutzen. Experten arbeiten mit den erweiterten Funktionen von Word 2010, um professionelle Dokumente zu verbessern, Dokumente zu erstellen, die zur Veröffentlichung bereit sind, und effektiv an Gruppenbearbeitungsprojekten zusammenzuarbeiten. Experten bearbeiten Word-Optionen, um ihre Umgebung an unterschiedliche Anforderungen anzupassen und die Produktivität zu steigern.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiy7
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-887&examname=Word%202010%20Expert&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-887
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
+- ar-sa
+- it
 - pt-br
 levels:
 - beginner
