--- a/learn-certs-pr/exams/98-364.yml
+++ b/learn-certs-pr/exams/98-364.yml
@@ -12,7 +12,11 @@ summary: |-
 subTitle: Kandidaten für diese Prüfung möchten einführende Kenntnisse und Fähigkeiten im Bereich von Datenbanken, einschließlich relationale Datenbanken wie Microsoft SQL- Server, unter Beweis stellen. Es wird empfohlen, dass die Kandidaten mit den Konzepten der hier beschriebenen Technologien vertraut sind und praktische Erfahrung vorweisen können, indem sie entweder die entsprechenden Trainings absolvieren oder mit den Lernprogrammen und Beispielen zu MSDN und in Microsoft Visual Studio arbeiten. Geringfügige praktische Erfahrungen mit den Technologien wird empfohlen, Berufserfahrung wird jedoch für diese Untersuchungen nicht vorausgesetzt.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJq
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=98-364&examname=Database%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-364
+providers:
+- providerType: pearson-vue
+  examUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=98-364&examname=Database%20Fundamentals&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/98-364
+- providerType: certiport
+  examUrl: http://www.certiport.com/locator
 locales:
 - en
 - zh-cn
@@ -42,7 +46,7 @@ courses:
 - uid: course.40364
 relatedCertifications:
 - related:
-    uid: certification.mta-database-fundamentals
+    uid: none
 resources:
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
@@ -51,7 +55,7 @@ resources:
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
   href: https://www.microsoft.com/learning/dashboard.aspx
 - title: Unterkünfte anfordern
-  description: Erfahren Sie mehr über die Anforderung einer Unterkunft für Ihre Prüfung.
+  description: Mehr erfahren über die Anforderung einer Unterkunft für Ihre Prüfung.
   href: http://www.pearsonvue.com/accommodations/pv_review.asp?clientName=Microsoft
 - title: Prüfungsrichtlinien und FAQs
   description: Überprüfen und verwalten Sie Ihre geplanten Termine, Zertifikate und Transkripte.
