--- a/learn-certs-pr/exams/az-204.yml
+++ b/learn-certs-pr/exams/az-204.yml
@@ -18,11 +18,14 @@ summary: |-
   Azure-Entwickler arbeiten mit Cloud-Lösungsarchitekten, Cloud-Datenbankadministratoren (DBAs), Cloud-Administratoren und Clients zusammen, um Lösungen zu implementieren.
 
   Ein Kandidat für dieses examens sollte über 1-2 Jahre Berufserfahrung und Erfahrung mit Microsoft Azure verfügen. Darüber hinaus sollte jemand in dieser Rolle über die Fähigkeit verfügen, in einer von Azure unterstützten Sprache zu programmieren und über Kenntnisse in Azure SDKs, Azure PowerShell, Azure CLI, Datenspeicheroptionen, Datenverbindungen, APIs, App-Authentifizierung und -Autorisierung, Computer- und Containerbereitstellung, Debugging und Leistungsoptimierung und Überwachung verfügen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwickeln von Azure Computing Solutions; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimierung von Lösungen; und Verbindung zu und Nutzung von Azure Services und Drittanbieter-Services.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Entwickeln von Azure Computing Solutions; Entwickeln für Azure Storage; Implementieren von Azure Security; Überwachung, Fehlerbehebung und Optimierung von Lösungen; und Verbindung zu und Nutzung von Azure Services und Drittanbieter-Services.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4oZ7B
 locales:
 - en
+- ja
+- zh-cn
+- ko
 providers:
 - providerType: pearson-vue
   examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-204&examname=Exam%20AZ-204:%20Developing%20Solutions%20for%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-204
