--- a/learn-certs-pr/exams/az-400.yml
+++ b/learn-certs-pr/exams/az-400.yml
@@ -7,13 +7,15 @@ uid: exam.az-400
 displayName: AZ-400
 summary: |-
   <div><div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 15. Juni 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am 15. Juni 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
-  Kandidaten für dieses examens sind DevOps-Profis, die Menschen, Prozesse und Technologien kombinieren, um kontinuierlich wertvolle Produkte und Dienstleistungen zu liefern, die den Bedürfnissen der Endbenutzer und den Unternehmenszielen entsprechen. Die Fachleute von DevOps optimieren die Bereitstellung, indem sie die Abläufe optimieren, die Kommunikation und Zusammenarbeit verbessern und die Automatisierung realisieren. Sie entwickeln und implementieren Strategien für Anwendungscode und Infrastruktur, die kontinuierliche Integration, Tests, Bereitstellung, Überwachung und Rückmeldung ermöglichen.
+  Kandidaten für diese Prüfung sollten über Fachkenntnisse im Umgang mit Menschen, Prozessen und Technologien haben, um kontinuierlich geschäftlichen Nutzen zu erzielen.
 
-  Die Kandidaten müssen mit agilen Praktiken vertraut sein. Sie müssen sowohl mit der Azure-Administration als auch mit der Azure-Entwicklung vertraut sein und Experten in mindestens einem dieser Bereiche sein. Azure DevOps-Profis müssen in der Lage sein, DevOps-Praktiken für Versionskontrolle, Compliance, Infrastruktur als Code, Konfigurationsmanagement, Build, Release und Testing unter Verwendung von Azure-Technologien zu entwickeln und umzusetzen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, eine DevOps-Strategie zu entwickeln und die folgenden Punkte umzusetzen: DevOps Entwicklungsprozesse, Abhängigkeitsmanagement, Anwendungsinfrastruktur und kontinuierliche Integration, Bereitstellung und Feedback.'
+  Zu den Aufgaben für diese Rolle gehören das Entwerfen und Implementieren von Strategien für Zusammenarbeit, Code, Infrastruktur, Quellcodeverwaltung, Sicherheit, Compliance, kontinuierliche Integration, Testen, Bereitstellung, Überwachung und Feedback.
+
+  Ein Kandidat für diese Prüfung muss sowohl mit der Azure-Verwaltung als auch mit der Entwicklung vertraut sein und Experte in mindestens einem dieser Bereiche sein.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwicklung einer Instrumentierungsstrategie; Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie; Entwicklung eines Sicherheits- und Compliance-Plans; Quellcodeverwaltung; Erleichterung der Kommunikation und Zusammenarbeit; kontinuierliche Integration definieren und implementieren; und eine kontinuierliche Strategie für das Liefer- und Release-Management definieren und implementieren.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VP8d
 practiceTestUrl: https://us.mindhub.com/p/MU-AZ-400?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,14 +28,14 @@ locales:
 levels:
 - advanced
 skills:
-- Der Inhalt dieser Prüfung wird am 15. Juni 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
-- Entwickeln einer DevOps-Strategie (20-25%)
-- Implementieren von DevOps Entwicklungsprozessen (20-25%)
-- Implementieren einer kontinuierlichen Integration (10-15%)
-- Implementieren von kontinuierlicher Bereitstellung (10-15%)
-- Implementieren des Abhängigkeitsmanagements (5-10%)
-- Implementieren der App-Infrastruktur (15-20%)
-- Implementieren von kontinuierlichem Feedback(10-15%)
+- Der Inhalt dieser Prüfung wurde am 15. Juni 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Entwickeln Sie eine Instrumentierungsstrategie (5-10%)
+- Entwicklung einer Zuverlässigkeitstechnik (SRE)-Strategie (5-10%)
+- Entwicklung eines Sicherheits- und Compliance-Plans (10-15%)
+- Quellcode verwalten (10-15%)
+- Ermöglichen der Kommunikation und Zusammenarbeit (10-15%)
+- Kontinuierliche Integration definieren und definieren (20-25%)
+- Definieren und implementieren Sie eine kontinuierliche Liefer- und Release-Management-Strategie (10-15%)
 roles:
 - devops-engineer
 products:
