--- a/learn-certs-pr/exams/az-500.yml
+++ b/learn-certs-pr/exams/az-500.yml
@@ -17,8 +17,8 @@ summary: |-
 
   Azure Security-Engineers sind häufig Teil eines größeren Teams, das sich mit Cloud-basierten Verwaltungs- und Sicherheitsumgebungen oder Hybridumgebungen als Teil einer kompletten Infrastruktur befasst.
 
-  Ein Kandidat für dieses examens sollte über fundierte Kenntnisse in Skripten und Automatisierung, ein tiefgreifendes Verständnis der Netzwerk-, Virtualisierungs- und Cloud-N-Tier-Architektur sowie eine umfassende Vertrautheit mit Cloud-Funktionen und -Produkten und -Services für Azure sowie anderen Microsoft-Produkten und -Services verfügen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identitäts- und Zugriffsmanagement, Platform-Protection implementieren, Sicherheitsmaßnahmen verwalten und Daten und Anwendungen schützen.'
+  Ein Kandidat für diese Prüfung sollte mit Skripten und Automatisierung vertraut sein und ein tiefes Verständnis für Netzwerk und Virtualisierung haben. Ein Kandidat sollte außerdem mit Cloud-Funktionen, Azure-Produkten und -Services sowie anderen Microsoft-Produkten und -Services bestens vertraut sein.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identitäts- und Zugriffsmanagement, Platform-Protection implementieren, Sicherheitsmaßnahmen verwalten und Daten und Anwendungen schützen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70
 practiceTestUrl: https://www.mindhub.com/p/MU-AZ-500?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -39,7 +39,7 @@ skills:
 - Verwalten von Identität und Zugriff (20-25%)
 - Plattform-Schutz implementieren (35-40%)
 - Verwaltung von Sicherheitsvorgängen (15-20%)
-- Sichern von Daten und Anwendungen (30-35%)
+- Daten und Anwendungen sichern (30-35%)
 roles:
 - security-engineer
 products:
