--- a/learn-certs-pr/power-platform-app-maker.yml
+++ b/learn-certs-pr/power-platform-app-maker.yml
@@ -10,8 +10,8 @@ summary: |-
 
   Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
 
-  <div><strong><br/>Hinweis&#58; Diese Zertifizierung wird ab Juli 2020 verfügbar sein.</strong></div>
-subTitle: Diese Zertifizierung wird ab Juli 2020 verfügbar sein. Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
+  <div><strong><br/>Note&#58; Diese Zertifizierung wird am oder um den 17. Juli 2020 verfügbar sein.</strong></div>
+subTitle: Diese Zertifizierung wird am oder um den 17. Juli 2020 verfügbar sein. Der App-Hersteller erstellt Lösungen, um Aufgaben und Prozesse für sich und sein Team zu vereinfachen, zu automatisieren und zu transformieren, die alle über fundiertes Fachwissen im Lösungsbereich verfügen. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
 levels:
 - intermediate
 skills:
