--- a/learn-certs-pr/exams/77-418.yml
+++ b/learn-certs-pr/exams/77-418.yml
@@ -8,11 +8,11 @@ displayName: 77-418
 summary: |-
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
 
-  Ein Kernkandidat für die Microsoft Word 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Word-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Word 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten sollten in der Lage sein, zwei- dreiseitige Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Dazu gehören zum Beispiel professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz. Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten und Kursleitern ein.
-subTitle: Ein Kernkandidat für die Microsoft Word 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Word-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Word 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten sollten in der Lage sein, zwei- dreiseitige Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Dazu gehören zum Beispiel professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz. Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten und Kursleitern ein.
+  Ein Kernkandidat für die Microsoft Word 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Word-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Word 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten müssen in der Lage sein, ein 2- bis 3-seitiges Dokument für verschiedenste Zwecke und Situationen zu erstellen und zu bearbeiten. Dazu gehören zum Beispiel professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz. Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten und Kursleitern ein.
+subTitle: Ein Kernkandidat für die Microsoft Word 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Word-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Word 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten müssen in der Lage sein, ein 2- bis 3-seitiges Dokument für verschiedenste Zwecke und Situationen zu erstellen und zu bearbeiten. Dazu gehören zum Beispiel professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz. Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten und Kursleitern ein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJC
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-418&examname=Word%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-418
 locales:
 - en
 - zh-cn
@@ -28,6 +28,8 @@ locales:
 - pl
 - pt-br
 - ru
+- ar-sa
+- el-gr
 levels:
 - beginner
 skills:
