--- a/learn-certs-pr/exams/77-888.yml
+++ b/learn-certs-pr/exams/77-888.yml
@@ -12,18 +12,18 @@ summary: |-
 subTitle: Experten-Nutzer von Microsoft Office Excel 2010 sind in der Lage, die Excel 2010-Software effizient und sicher auf der Funktions- und Funktionsebene zu nutzen. Experten sind mit erweiterten Formeln, Funktionen und Datenanalysetools vertraut. Experten können Daten für Analyse, Präsentation und Zusammenarbeit bearbeiten. Darüber hinaus können erfahrene Anwender Excel-Optionen bearbeiten, um ihre Umgebung an unterschiedliche Anforderungen anzupassen und ihre Produktivität zu steigern.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t7k0
-scheduleExamUrl: https://www.certiport.com/locator
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-888&examname=Excel%202010%20Expert&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-888
 locales:
-- en
 - zh-cn
 - zh-tw
 - de
 - es
 - fr
-- it
 - ja
 - ko
 - nl
+- ar-sa
+- it
 - pt-br
 levels:
 - beginner
