--- a/learn-certs-pr/exams/mb-600.yml
+++ b/learn-certs-pr/exams/mb-600.yml
@@ -6,14 +6,17 @@ metadata:
 uid: exam.mb-600
 displayName: MB-600
 summary: |-
+  <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 30. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
   Lösungsarchitekten für Microsoft Dynamics 365 + Power-Plattform führen erfolgreiche Implementierungen durch und konzentrieren sich auf Lösungen, die allgemeine geschäftliche und technische Anforderungen von Unternehmen erfüllen.
 
   Ein Solution Architects (Lösungsarchitekt) verfügt sowohl über das technische als auch das Fachwissen über die modellgesteuerten Power Platform-Anwendungen in Dynamics 365. Diese umfassen Dynamics 365 for Customer Service, Dynamics 365 for Field Service, Dynamics 365 for Marketing sowie Dynamics 365 for Sales, die zugehörige Microsoft Cloud-solutions(Lösungen und) Drittanbieter-Technologien. Der Solution Architects (Lösungsarchitekt) setzt seine Kenntnisse und Erfahrungen während des gesamten Projekt-Lebenszyklus ein. Der Solution Architects (Lösungsarchitekt) führt proaktive und präventive Arbeiten durch, die den Wert der Investition des Kunden steigern und die Gesundheit des Unternehmens fördern. Das erfordert die Fähigkeit, Möglichkeiten zur Lösung von Geschäftsproblemen zu identifizieren.
 
   Solution Architects (Lösungsarchitekt) haben Erfahrung in den fachlichen und technischen Disziplinen der Power Platform und modellgesteuerten Anwendungen in Dynamics 365. Solution Architects (Lösungsarchitekt) sollen in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Storage und Änderungsmanagement zu erleichtern. In dieser Rolle stellen Lösungsarchitekten die Balance zwischen den fachlichen und nicht-fachlichen geschäftlichen Anforderungen eines Projekts her.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Anforderungsanalyse, Lösungskonzeption sowie Entwicklung und Implementieren der Lösung.'
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Anforderungsanalyse, Lösungskonzeption sowie Entwicklung und Implementierung der Lösung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE440oW
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-600&examname=Exam%20MB-600:%20Microsoft%20Power%20Apps%20+%20Dynamics%20365%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-600
@@ -22,6 +25,7 @@ locales:
 levels:
 - advanced
 skills:
+- Der Inhalt dieser Prüfung wird am 30. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Analysieren der Anforderungen und Planen einer Lösung (30-35%)
 - Eine Lösung entwickeln (45-50%)
 - Die Lösung umsetzen (20-25%)
