--- a/learn-certs-pr/exams/mb-700.yml
+++ b/learn-certs-pr/exams/mb-700.yml
@@ -6,14 +6,17 @@ metadata:
 uid: exam.mb-700
 displayName: MB-700
 summary: |-
+  <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
+  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wird am 28. Juli 2020 aktualisiert. Bitte laden Sie das unten stehende Dokument zu den gemessenen Fähigkeiten herunter, um zu sehen, was sich ändern wird.<br/><br/></div>
+  </div>
 
-  Solution Architects (Lösungsarchitekten) für Finance and Operations Apps in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die sich mit den Unternehmen und den Mitgliedern des Implementierensteams beraten, um für die Anforderungen des Unternehmens klar definierte, kostengünstige Lösungen zu entwickeln.
+  Solution Architects für Finanz- und Betriebsanwendungen in Microsoft Dynamics 365 sind vertrauenswürdige Berater, die die von Unternehmen empfohlenen Vorgehensweisen, Softwarefunktionen und die Bereitstellung von Implementierungen verstehen, damit sie die Mitglieder des Implementierungsteams zur Implementierung von Dynamics-Lösungen führen können, mit denen die vordefinierten Implementierungsziele erreicht werden können.
 
-  Der Solution Architect (Lösungsarchitekt) ist für die Integrität und erfolgreiche Umsetzung des gesamten Lösungsdesigns verantwortlich. Er bietet eine kritische Begleitung während der Pre-Sales-Phase und des Designs, er berät während des restlichen Projektlebenszyklus und löst Probleme, die während der Implementieren auftreten.
+  Ein Solution-Architekt ist für die Integrität und erfolgreiche Bereitstellung der End-to-End-Lösung verantwortlich. Der Architekt gibt während des gesamten Verkaufsprozesses wichtige Hinweise und setzt die Überwachung während des restlichen Projektlebenszyklus fort, um Probleme zu lösen, die während der Implementierung auftreten, und um sicherzustellen, dass die Implementierungsziele erreicht werden.
 
-  Der Solution Architect (Lösungsarchitekt) muss über breites Wissen und Erfahrung verfügen, das die Geschäftsanforderungen und Produktfunktionen abdeckt. Der Solution Architect (Lösungsarchitekt) muss über breites funktionales und technisches Fachwissen als Entwickler oder Fachberater in einer der folgenden Funktionen verfügen&#58; Finanzen, Fertigung oder Lieferkettenmanagement. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identifizieren von Lösungsanforderungen, Entwerfen von Lösungskomponenten und Definieren von Lösungstest- und Managementstrategien.'
+  Der Solution-Architekt muss über umfassende Kenntnisse und Erfahrungen in Bezug auf Industriestandards und Produktfähigkeiten verfügen. Der Solution-Architekt muss über ein breites Fachwissen in den funktionalen und technischen Bereichen der Dynamics-Lösung verfügen. Er sollte über Plattformen, Tools und Funktionsbereiche wie Finanzen, Lieferkettenmanagement und Fertigung Bescheid wissen. Darüber hinaus verfügen Lösungsarchitekten über umfangreiche Fachkenntnisse in einer oder mehreren Kundenbranchen.
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Identifizieren von Lösungsanforderungen, Entwerfen von Lösungskomponenten und Definieren von Lösungstest- und Managementstrategien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43Vdh
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-700&examname=Exam%20MB-700:%20Microsoft%20Dynamics%20365%3A%20Finance%20and%20Operations%20Apps%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-700
@@ -22,10 +25,12 @@ locales:
 levels:
 - advanced
 skills:
+- Der Inhalt dieser Prüfung wird am 28. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungskompetenzen herunter, um zu sehen, was sich ändern wird.
 - Identifizieren von Lösungsanforderungen(30-35%)
 - Entwerfen von Lösungskomponenten (40-45%)
 - Definition von Lösungstest- und Managementstrategien (25-30%)
 roles:
+- functional-consultant
 - solution-architect
 products:
 - dynamics
