--- a/learn-certs-pr/power-apps-and-d365-developer-associate.yml
+++ b/learn-certs-pr/power-apps-and-d365-developer-associate.yml
@@ -13,7 +13,7 @@ subTitle: Developers (Entwickler), die mit Microsoft Power Apps und Dynamics 365
 levels:
 - intermediate
 skills:
-- Erkennen von Anforderungen, Analyse und Planung
+- Durchführung von Erkennung, Planung und Analyse
 - Erstellen und Verwalten des Benutzererlebnisdesigns
 - Verwalten von Entitäten und Daten
 - Sicherheit implementieren
@@ -34,10 +34,7 @@ products:
 - dynamics-customer-engagement
 courses:
 - uid: course.mb-400t00
-- uid: course.mb-200t01
-- uid: course.mb-200t02
-- uid: course.mb-200t03
-- uid: course.mb-200t04
+- uid: course.mb-200t00
 paths:
 - uid: learn-bizapps.create-powerapps
 - uid: learn-bizapps.create-app-models-business-processes
@@ -46,9 +43,9 @@ paths:
 - uid: learn-bizapps.create-use-analytics-reports-power-bi
 - uid: learn-dynamics.get-started-portals
 - uid: learn-dynamics.work-with-portals
-- uid: learn-dynamics.extend-power-platform-common-data-service
-- uid: learn-dynamics.extend-power-platform-model-driven-apps
 - uid: learn-dynamics.introduction-development
+- uid: learn-dynamics.extend-power-platform-model-driven-apps
+- uid: learn-dynamics.extend-power-platform-common-data-service
 - uid: learn-dynamics.extend-portals
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42Fcm
 exams:
